# twitchviewer

./: .claudeignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_QTMULTIMEDIA.md  RELEASE_CHECKLIST.md  SCREENSHOTS.md  clickable.yaml  config.cpp.example  config.h  main.cpp  manifest.json.in  networkmanager.cpp  networkmanager.h  snapcraft.yaml  twitchauthmanager.cpp  twitchauthmanager.h  twitchhelixapi.cpp  twitchhelixapi.h  twitchstreamfetcher.cpp  twitchstreamfetcher.h  twitchviewer.apparmor  twitchviewer.desktop.in
.claude/: config.json  instructions.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
plugins/: CMakeLists.txt
plugins/Example/: example.cpp  example.h  plugin.cpp  plugin.h
plugins/TwitchPlayer/: CMakeLists.txt  mpvplayer.cpp  mpvplayer.h  plugin.cpp  plugin.h  qmldir
qml/: CategoriesPage.qml  FollowedPage.qml  Main.qml  PlayerPage.qml  SettingsPage.qml  StreamsForCategoryPage.qml  ThemeManager.qml  qml.qrc
qml/components/: CustomPullToRefresh.qml
src/api/: twitchhelixapi.cpp  twitchhelixapi.h
src/auth/: twitchauthmanager.cpp  twitchauthmanager.h
src/core/: config.h  logging.h
src/network/: networkmanager.cpp
